#576 - created custom view for tag details dialog - in tags adapter - display material dialog when user clicks on tag - lazy load count is 5 - RepositoryTagsFragment - added CommitInfoPresenter - because we want to fetch commit info from single tag - TagsService - fetch only 15 tags per page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -326,4 +326,6 @@
   <string name="commit_status">Status</string>
   <string name="commits_detail_loading">Loading commit</string>
   <string name="parent_commit">Parent: %s</string>
+  <string name="download_zip_archive">Download zip</string>
+  <string name="download_tar_archive">Download tar</string>
 </resources>
