#576 - Repository 'releases' tab missing some releases (#583)
* #576:
- For every tags we also receive information about release if exist
- RepositoryTagsFragment, TagsAdapter and RepositoryTagsPresenter
- DI
- abstract cache data source
- Dto
- changed adapter for RecyclerView in fragment
- service for receiving tags, commits and releases
- TagsRetrofitWrapper
- TagsCloudDataSource
- POJO's

* Implementing Material dialog for tags and releases

* #576
- created custom view for tag details dialog
- in tags adapter - display material dialog when user clicks on tag
- lazy load count is 5
- RepositoryTagsFragment - added CommitInfoPresenter - because we want to fetch commit info from single tag
- TagsService - fetch only 15 tags per page

* #576
- dagger 2 dependencies for tests
- DI structure for tests
- RepositoryTagsPresenter test

* #576
- DI for RepositoryTagsPresenter

* #576
- Dependency Injection and IoC for RepositoryTagsPresenter
- Schedulers for UI thread and IO thread could be now injected
- Token could be also injected using @Inject and @Token annotations
- Test for RepositoryTagsPresenter
- BeanUtils for creating test beans

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -201,8 +201,8 @@
   <string name="aissue_detail_removed_labels">Removed labels %s</string>
   <string name="navigation_member_repos">Contributed</string>
   <string name="thanks_for_donate">Thank you so much!</string>
-  <string name="no_releases">No releases on this repository</string>
-  <string name="releases">Releases</string>
+  <string name="no_tags">No tags on this repository</string>
+  <string name="tags">Tags</string>
   <string name="repo_release_fragment_detail_title">Info</string>
   <string name="repo_release_fragment_assets_title">Assets</string>
   <string name="release_asset_zip">Source code (zip)</string>
@@ -326,4 +326,6 @@
   <string name="commit_status">Status</string>
   <string name="commits_detail_loading">Loading commit</string>
   <string name="parent_commit">Parent: %s</string>
+  <string name="download_zip_archive">Download zip</string>
+  <string name="download_tar_archive">Download tar</string>
 </resources>
