--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -334,7 +334,7 @@
   <string name="repo_detail_issues">ISSUES</string>
   <string name="repo_detail_pulls">PULL REQUESTS</string>
   <string name="repo_detail_contributors">CONTRIBUTORS</string>
-  <string name="commit_time_ago"><![CDATA[Last commit on <b>%1$s</b> %2$s]]></string>
+  <string name="commit_time_ago"><![CDATA[Last commit by <b>%1$s</b> %2$s]]></string>
   <string name="repo_detail_starred">Unstar %1$s</string>
   <string name="repo_detail_no_starred">Star %1$s</string>
   <string name="repo_detail_watched">Unwatch %1$s</string>
