--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -327,4 +327,5 @@
   <string name="repo_detail_watched_no_number">Unwatch</string>
   <string name="repo_detail_no_watched_no_number">Watch</string>
   <string name="repo_detail_tags">%1$d Releases</string>
+  <string name="app_version">App version</string>
 </resources>
