--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -329,4 +329,5 @@
   <string name="repo_detail_tags">%1$d Releases</string>
   <string name="app_version">App version</string>
   <string name="repo_settings_defalut_tab_title">Default tab</string>
+  <string name="expand">Expand</string>
 </resources>
