Ui improvements for releases

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -330,4 +330,5 @@
   <string name="app_version">App version</string>
   <string name="repo_settings_defalut_tab_title">Default tab</string>
   <string name="expand">Expand</string>
+  <string name="collapse">Collapse</string>
 </resources>
